# easyexif

./: .gitignore  CMakeLists.txt  README.md  build.sh  exif.cpp  test.sh
demo/: CMakeLists.txt  demo.cpp
easyexif/: CMakeLists.txt
